--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search images</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+<body>
+  <div class="container">
+    <form id="search-form">
+      <input type="text" id="search-input" name="query" placeholder="Search images" />
+      <button class="button" type="submit">Search</button>
+    </form>
+  </div>
+  <div class="loader is-hidden"></div>
+  <ul class="gallery"></ul>
+  <script src="./js/pixabay-api.js" type="module"></script>
+  <script src="./js/render-functions.js" type="module"></script>
+  <script src="./main.js" type="module"></script>
+</body>
 
-    <script type="module" src="./main.js"></script>
-  </body>
 </html>
